--- a/problems/construct-binary-tree-from-preorder-and-inorder-traversal.html
+++ b/problems/construct-binary-tree-from-preorder-and-inorder-traversal.html
@@ -53,3 +53,71 @@
 </ul>
 
 <strong>Tags:</strong> Array, Hash Table, Divide and Conquer, Tree, Binary Tree
+
+<p><strong>Editorial</strong></p>
+
+<p>
+  The key idea is to use preorder to find the root and inorder to determine the
+  left and right subtrees.
+</p>
+
+<ol>
+  <li>
+    The first element in <code>preorder</code> is always the root of the tree.
+  </li>
+  <li>
+    Find the root in <code>inorder</code>. All elements to the left are part of
+    the left subtree, and all elements to the right are part of the right
+    subtree.
+  </li>
+  <li>
+    Recursively apply this logic to construct the left and right subtrees.
+  </li>
+</ol>
+
+<p><strong>Java Solution:</strong></p>
+<pre>
+/**
+ * Definition for a binary tree node.
+ * public class TreeNode {
+ *     int val;
+ *     TreeNode left;
+ *     TreeNode right;
+ *     TreeNode() {}
+ *     TreeNode(int val) { this.val = val; }
+ *     TreeNode(int val, TreeNode left, TreeNode right) {
+ *         this.val = val;
+ *         this.left = left;
+ *         this.right = right;
+ *     }
+ * }
+ */
+class Solution {
+    public TreeNode buildTree(int[] preorder, int[] inorder) {
+        return buildTreeHelper(preorder, 0, preorder.length - 1, inorder, 0, inorder.length - 1);
+    }
+
+    private TreeNode buildTreeHelper(int[] preorder, int preStart, int preEnd, int[] inorder, int inStart, int inEnd) {
+        if (preStart > preEnd || inStart > inEnd) {
+            return null;
+        }
+
+        TreeNode root = new TreeNode(preorder[preStart]);
+
+        int inRoot = inStart;
+        for (int i = inStart; i <= inEnd; i++) {
+            if (inorder[i] == root.val) {
+                inRoot = i;
+                break;
+            }
+        }
+
+        int numsLeft = inRoot - inStart;
+
+        root.left = buildTreeHelper(preorder, preStart + 1, preStart + numsLeft, inorder, inStart, inRoot - 1);
+        root.right = buildTreeHelper(preorder, preStart + numsLeft + 1, preEnd, inorder, inRoot + 1, inEnd);
+
+        return root;
+    }
+}
+</pre>
