--- a/problems/implement-trie-prefix-tree.html
+++ b/problems/implement-trie-prefix-tree.html
@@ -38,19 +38,19 @@
 
 <pre>
 <strong>Input</strong>
-[&quot;Trie&quot;, &quot;insert&quot;, &quot;search&quot;, &quot;search&quot;, &quot;startsWith&quot;, &quot;insert&quot;, &quot;search&quot;]
-[[], [&quot;apple&quot;], [&quot;apple&quot;], [&quot;app&quot;], [&quot;app&quot;], [&quot;app&quot;], [&quot;app&quot;]]
+["Trie", "insert", "search", "search", "startsWith", "insert", "search"]
+[[], ["apple"], ["apple"], ["app"], ["app"], ["app"], ["app"]]
 <strong>Output</strong>
 [null, null, true, false, true, null, true]
 
 <strong>Explanation</strong>
 Trie trie = new Trie();
-trie.insert(&quot;apple&quot;);
-trie.search(&quot;apple&quot;);   // return True
-trie.search(&quot;app&quot;);     // return False
-trie.startsWith(&quot;app&quot;); // return True
-trie.insert(&quot;app&quot;);
-trie.search(&quot;app&quot;);     // return True
+trie.insert("apple");
+trie.search("apple");   // return True
+trie.search("app");     // return False
+trie.startsWith("app"); // return True
+trie.insert("app");
+trie.search("app");     // return True
 </pre>
 
 <p>&nbsp;</p>
@@ -70,3 +70,78 @@ trie.search(&quot;app&quot;);     // return True
 </ul>
 
 <strong>Tags:</strong> Hash Table, String, Design, Trie
+<pre>
+class Trie {
+
+    private TrieNode root;
+
+    public Trie() {
+        root = new TrieNode();
+    }
+
+    public void insert(String word) {
+        TrieNode node = root;
+        for (char ch : word.toCharArray()) {
+            if (!node.containsKey(ch)) {
+                node.put(ch, new TrieNode());
+            }
+            node = node.get(ch);
+        }
+        node.setEnd();
+    }
+
+    public boolean search(String word) {
+        TrieNode node = root;
+        for (char ch : word.toCharArray()) {
+            if (!node.containsKey(ch)) {
+                return false;
+            }
+            node = node.get(ch);
+        }
+        return node.isEnd();
+    }
+
+    public boolean startsWith(String prefix) {
+        TrieNode node = root;
+        for (char ch : prefix.toCharArray()) {
+            if (!node.containsKey(ch)) {
+                return false;
+            }
+            node = node.get(ch);
+        }
+        return true;
+    }
+}
+
+class TrieNode {
+
+    private TrieNode[] links;
+    private final int R = 26;
+    private boolean isEnd;
+
+    public TrieNode() {
+        links = new TrieNode[R];
+    }
+
+    public boolean containsKey(char ch) {
+        return links[ch - 'a'] != null;
+    }
+
+    public TrieNode get(char ch) {
+        return links[ch - 'a'];
+    }
+
+    public void put(char ch, TrieNode node) {
+        links[ch - 'a'] = node;
+    }
+
+    public void setEnd() {
+        isEnd = true;
+    }
+
+    public boolean isEnd() {
+        return isEnd;
+    }
+}
+
+</pre>
