--- a/problems/valid-parentheses.html
+++ b/problems/valid-parentheses.html
@@ -3,10 +3,9 @@
 <h3>Statement</h3>
 
 <p>
-  Given a string <code>s</code> containing just the characters
-  <code>&#39;(&#39;</code>, <code>&#39;)&#39;</code>, <code>&#39;{&#39;</code>,
-  <code>&#39;}&#39;</code>, <code>&#39;[&#39;</code> and
-  <code>&#39;]&#39;</code>, determine if the input string is valid.
+  Given a string <code>s</code> containing just the characters <code>'('</code>,
+  <code>')'</code>, <code>'{'</code>, <code>'}'</code>, <code>'['</code> and
+  <code>']'</code>, determine if the input string is valid.
 </p>
 
 <p>An input string is valid if:</p>
@@ -23,9 +22,7 @@
 <p><strong class="example">Example 1:</strong></p>
 
 <div class="example-block">
-  <p>
-    <strong>Input:</strong> <span class="example-io">s = &quot;()&quot;</span>
-  </p>
+  <p><strong>Input:</strong> <span class="example-io">s = "()"</span></p>
 
   <p><strong>Output:</strong> <span class="example-io">true</span></p>
 </div>
@@ -33,10 +30,7 @@
 <p><strong class="example">Example 2:</strong></p>
 
 <div class="example-block">
-  <p>
-    <strong>Input:</strong>
-    <span class="example-io">s = &quot;()[]{}&quot;</span>
-  </p>
+  <p><strong>Input:</strong> <span class="example-io">s = "()[]{}"</span></p>
 
   <p><strong>Output:</strong> <span class="example-io">true</span></p>
 </div>
@@ -44,9 +38,7 @@
 <p><strong class="example">Example 3:</strong></p>
 
 <div class="example-block">
-  <p>
-    <strong>Input:</strong> <span class="example-io">s = &quot;(]&quot;</span>
-  </p>
+  <p><strong>Input:</strong> <span class="example-io">s = "(]"</span></p>
 
   <p><strong>Output:</strong> <span class="example-io">false</span></p>
 </div>
@@ -54,9 +46,7 @@
 <p><strong class="example">Example 4:</strong></p>
 
 <div class="example-block">
-  <p>
-    <strong>Input:</strong> <span class="example-io">s = &quot;([])&quot;</span>
-  </p>
+  <p><strong>Input:</strong> <span class="example-io">s = "([])"</span></p>
 
   <p><strong>Output:</strong> <span class="example-io">true</span></p>
 </div>
@@ -68,9 +58,7 @@
   <li>
     <code>1 &lt;= s.length &lt;= 10<sup>4</sup></code>
   </li>
-  <li>
-    <code>s</code> consists of parentheses only <code>&#39;()[]{}&#39;</code>.
-  </li>
+  <li><code>s</code> consists of parentheses only <code>'()[]{}'</code>.</li>
 </ul>
 
 <strong>Tags:</strong> String, Stack
@@ -87,3 +75,36 @@
     opening for it. If yes, pop it from the stack. Otherwise, return false.
   </li>
 </ul>
+
+<h4>Editorial</h4>
+<p>
+  The core idea behind solving this problem is to use a stack data structure. As
+  we iterate through the string, we push opening brackets onto the stack. When
+  we encounter a closing bracket, we check if the stack is empty or if the top
+  element of the stack is the corresponding opening bracket. If it is, we pop
+  the opening bracket from the stack. If not, the string is invalid. After
+  iterating through the entire string, if the stack is empty, it means all
+  brackets were properly closed. Otherwise, the string is invalid.
+</p>
+
+<pre><code>
+ class Solution {
+  public boolean isValid(String s) {
+   Stack&lt;Character&gt; stack = new Stack&lt;&gt;();
+   for (char c : s.toCharArray()) {
+    if (c == '(' || c == '[' || c == '{') {
+     stack.push(c);
+    } else if (c == ')' &amp;&amp; !stack.isEmpty() &amp;&amp; stack.peek() == '(') {
+     stack.pop();
+    } else if (c == ']' &amp;&amp; !stack.isEmpty() &amp;&amp; stack.peek() == '[') {
+     stack.pop();
+    } else if (c == '}' &amp;&amp; !stack.isEmpty() &amp;&amp; stack.peek() == '{') {
+     stack.pop();
+    } else {
+     return false;
+    }
+   }
+   return stack.isEmpty();
+  }
+ }
+ </code></pre>
