--- a/problems/word-search.html
+++ b/problems/word-search.html
@@ -69,3 +69,53 @@
 </p>
 
 <strong>Tags:</strong> Array, String, Backtracking, Depth-First Search, Matrix
+
+<p><strong>Editorial:</strong></p>
+<p>
+  This problem can be solved using Depth-First Search (DFS) with backtracking.
+  The main idea is to iterate through each cell of the board and start a DFS
+  search if the cell's character matches the first character of the word. During
+  the DFS search, we explore adjacent cells (up, down, left, right) to find the
+  remaining characters of the word. We mark visited cells to avoid reusing them
+  in the same path. If we find the entire word, we return true. If we reach a
+  dead end, we backtrack and try a different path.
+</p>
+
+<pre><code>
+class Solution {
+    public boolean exist(char[][] board, String word) {
+        int m = board.length;
+        int n = board[0].length;
+
+        for (int i = 0; i < m; i++) {
+            for (int j = 0; j < n; j++) {
+                if (board[i][j] == word.charAt(0) && dfs(board, i, j, word, 0)) {
+                    return true;
+                }
+            }
+        }
+        return false;
+    }
+
+    private boolean dfs(char[][] board, int row, int col, String word, int index) {
+        if (index == word.length()) {
+            return true;
+        }
+
+        if (row < 0 || row >= board.length || col < 0 || col >= board[0].length || board[row][col] != word.charAt(index)) {
+            return false;
+        }
+
+        char temp = board[row][col];
+        board[row][col] = '*'; 
+
+        boolean found = dfs(board, row + 1, col, word, index + 1) ||
+                       dfs(board, row - 1, col, word, index + 1) ||
+                       dfs(board, row, col + 1, word, index + 1) ||
+                       dfs(board, row, col - 1, word, index + 1);
+
+        board[row][col] = temp; 
+        return found;
+    }
+}
+</code></pre>
