--- a/problems/binary-tree-maximum-path-sum.html
+++ b/problems/binary-tree-maximum-path-sum.html
@@ -30,18 +30,20 @@
   style="width: 322px; height: 182px"
 />
 <pre>
-<strong>Input:</strong> root = [1,2,3]
-<strong>Output:</strong> 6
-<strong>Explanation:</strong> The optimal path is 2 -&gt; 1 -&gt; 3 with a path sum of 2 + 1 + 3 = 6.
-</pre>
+ <strong>Input:</strong> root = [1,2,3]
+ <strong>Output:</strong> 6
+ <strong>Explanation:</strong> The optimal path is 2 -&gt; 1 -&gt; 3 with a path sum of 2 + 1 + 3 = 6.
+ </pre
+>
 
 <p><strong class="example">Example 2:</strong></p>
 <img alt="" src="https://assets.leetcode.com/uploads/2020/10/13/exx2.jpg" />
 <pre>
-<strong>Input:</strong> root = [-10,9,20,null,null,15,7]
-<strong>Output:</strong> 42
-<strong>Explanation:</strong> The optimal path is 15 -&gt; 20 -&gt; 7 with a path sum of 15 + 20 + 7 = 42.
-</pre>
+ <strong>Input:</strong> root = [-10,9,20,null,null,15,7]
+ <strong>Output:</strong> 42
+ <strong>Explanation:</strong> The optimal path is 15 -&gt; 20 -&gt; 7 with a path sum of 15 + 20 + 7 = 42.
+ </pre
+>
 
 <p>&nbsp;</p>
 <p><strong>Constraints:</strong></p>
@@ -56,3 +58,50 @@
 
 <strong>Tags:</strong> Dynamic Programming, Tree, Depth-First Search, Binary
 Tree
+
+<p><strong>Editorial</strong></p>
+<p>
+  The key idea is to use a recursive function that returns the maximum path sum
+  starting from the current node and going down to one of its children. While
+  calculating this, we also update a global variable that stores the maximum
+  path sum found so far. The maximum path sum can either be the node itself, the
+  node plus the maximum path sum from its left child, the node plus the maximum
+  path sum from its right child, or the node plus the maximum path sum from both
+  its left and right children.
+</p>
+
+<pre><code>
+ # Definition for a binary tree node.
+ # class TreeNode:
+ #     def __init__(self, val=0, left=None, right=None):
+ #         self.val = val
+ #         self.left = left
+ #         self.right = right
+ class Solution:
+  def maxPathSum(self, root: Optional[TreeNode]) -> int:
+  max_sum = float('-inf')
+
+  def max_gain(node):
+  nonlocal max_sum
+  if not node:
+  return 0
+
+  # max contribution starting from left child if it is positive
+  left_gain = max(max_gain(node.left), 0)
+
+  # max contribution starting from right child if it is positive
+  right_gain = max(max_gain(node.right), 0)
+
+  # price to start a new path where `node` is a highest node
+  price_newpath = node.val + left_gain + right_gain
+
+  # update max_sum if it is better to start a new path
+  max_sum = max(max_sum, price_newpath)
+
+  # for recursion :
+  # return the max gain if continue the same path
+  return node.val + max(left_gain, right_gain)
+
+  max_gain(root)
+  return max_sum
+ </code></pre>
