--- a/problems/climbing-stairs.html
+++ b/problems/climbing-stairs.html
@@ -50,3 +50,33 @@
     the step sizes)
   </li>
 </ul>
+
+<h3>Editorial</h3>
+
+<p>
+  The problem can be solved using dynamic programming. Let <code>dp[i]</code> be
+  the number of distinct ways to reach the <code>i</code>-th step. To reach the
+  <code>i</code>-th step, we can either take one step from the
+  <code>(i-1)</code>-th step or two steps from the <code>(i-2)</code>-th step.
+  Therefore, <code>dp[i] = dp[i-1] + dp[i-2]</code>. The base cases are
+  <code>dp[1] = 1</code> and <code>dp[2] = 2</code>.
+</p>
+
+<h3>Solution</h3>
+
+<pre>
+public class Solution {
+    public int climbStairs(int n) {
+        if (n <= 2) {
+            return n;
+        }
+        int[] dp = new int[n + 1];
+        dp[1] = 1;
+        dp[2] = 2;
+        for (int i = 3; i <= n; i++) {
+            dp[i] = dp[i - 1] + dp[i - 2];
+        }
+        return dp[n];
+    }
+}
+</pre>
