--- a/problems/coin-change.html
+++ b/problems/coin-change.html
@@ -53,4 +53,31 @@
   </li>
 </ul>
 
-<strong>Tags:</strong> Array, Dynamic Programming, Breadth-First Search
+<h3>Solution</h3>
+
+<p>
+  We can solve this problem using dynamic programming. Let <code>dp[i]</code> be
+  the minimum number of coins needed to make up the amount <code>i</code>. We
+  can initialize <code>dp[0] = 0</code> and all other values to infinity. Then,
+  for each coin <code>c</code>, we can iterate through all amounts
+  <code>i</code> from <code>c</code> to <code>amount</code> and update
+  <code>dp[i] = min(dp[i], dp[i - c] + 1)</code>.
+</p>
+
+<pre>
+class Solution {
+    public int coinChange(int[] coins, int amount) {
+        int[] dp = new int[amount + 1];
+        Arrays.fill(dp, amount + 1);
+        dp[0] = 0;
+
+        for (int coin : coins) {
+            for (int i = coin; i <= amount; i++) {
+                dp[i] = Math.min(dp[i], dp[i - coin] + 1);
+            }
+        }
+
+        return dp[amount] > amount ? -1 : dp[amount];
+    }
+}
+</pre>
