--- a/problems/container-with-most-water.html
+++ b/problems/container-with-most-water.html
@@ -65,3 +65,68 @@
   </li>
   <li>How can you calculate the amount of water at each step?</li>
 </ul>
+
+<h3>Solution</h3>
+
+<h2>Intuition</h2>
+
+<p>
+  The problem requires us to find two lines that maximize the area of a
+  container formed with the x-axis. The area is determined by the shorter line
+  (height) and the distance between the lines (width). A brute-force approach
+  would be O(n^2), but a two-pointer approach can solve it in O(n) time.
+</p>
+
+<h2>Approach</h2>
+
+<ol>
+  <li>
+    Initialize two pointers, <code>left</code> at the start and
+    <code>right</code> at the end of the array.
+  </li>
+  <li>
+    Calculate the area between the lines at <code>left</code> and
+    <code>right</code>.
+  </li>
+  <li>Update the maximum area found so far.</li>
+  <li>
+    Move the pointer that points to the shorter line inward. This is because
+    moving the taller line won't increase the height, and we want to find a
+    potentially taller line that could increase the area.
+  </li>
+  <li>
+    Repeat steps 2-4 until the <code>left</code> and <code>right</code> pointers
+    meet.
+  </li>
+</ol>
+
+<h2>Complexity</h2>
+<ul>
+  <li>Time complexity: O(n)</li>
+  <li>Space complexity: O(1)</li>
+</ul>
+
+<h2>Code</h2>
+<pre><code>
+class Solution {
+public:
+    int maxArea(vector&lt;int&gt;&amp; height) {
+        int left = 0, right = height.size() - 1;
+        int maxArea = 0;
+
+        while (left &lt; right) {
+            int width = right - left;
+            int ht = min(height[left], height[right]);
+            int area = width * ht;
+            maxArea = max(maxArea, area);
+
+            if (height[left] &lt; height[right]) {
+                left++;
+            } else {
+                right--;
+            }
+        }
+        return maxArea;
+    }
+};
+</code></pre>
