--- a/problems/counting-bits.html
+++ b/problems/counting-bits.html
@@ -7,35 +7,36 @@
   ><em> of length </em><code>n + 1</code><em> such that for each </em
   ><code>i</code><em> </em>(<code>0 &lt;= i &lt;= n</code>)<em>, </em
   ><code>ans[i]</code><em> is the <strong>number of </strong></em><code>1</code
-  ><em><strong>&#39;s</strong> in the binary representation of </em
-  ><code>i</code>.
+  ><em><strong>'s</strong> in the binary representation of </em><code>i</code>.
 </p>
 
 <p>&nbsp;</p>
 <p><strong class="example">Example 1:</strong></p>
 
 <pre>
-<strong>Input:</strong> n = 2
-<strong>Output:</strong> [0,1,1]
-<strong>Explanation:</strong>
-0 --&gt; 0
-1 --&gt; 1
-2 --&gt; 10
-</pre>
+  <strong>Input:</strong> n = 2
+  <strong>Output:</strong> [0,1,1]
+  <strong>Explanation:</strong>
+  0 --&gt; 0
+  1 --&gt; 1
+  2 --&gt; 10
+ </pre
+>
 
 <p><strong class="example">Example 2:</strong></p>
 
 <pre>
-<strong>Input:</strong> n = 5
-<strong>Output:</strong> [0,1,1,2,1,2]
-<strong>Explanation:</strong>
-0 --&gt; 0
-1 --&gt; 1
-2 --&gt; 10
-3 --&gt; 11
-4 --&gt; 100
-5 --&gt; 101
-</pre>
+  <strong>Input:</strong> n = 5
+  <strong>Output:</strong> [0,1,1,2,1,2]
+  <strong>Explanation:</strong>
+  0 --&gt; 0
+  1 --&gt; 1
+  2 --&gt; 10
+  3 --&gt; 11
+  4 --&gt; 100
+  5 --&gt; 101
+ </pre
+>
 
 <p>&nbsp;</p>
 <p><strong>Constraints:</strong></p>
@@ -76,3 +77,53 @@
     of 1s?
   </li>
 </ul>
+
+<h3>Editorial</h3>
+
+<p>
+  The problem asks us to count the number of set bits (1s) in the binary
+  representation of each number from 0 to n. A naive approach would be to
+  iterate from 0 to n and, for each number, count its set bits. This approach
+  would have a time complexity of O(n log n) because counting bits for each
+  number takes O(log n) time. However, the challenge asks for a linear time O(n)
+  solution.
+</p>
+
+<p>
+  We can achieve linear time complexity by using dynamic programming. The key
+  idea is to use the already computed values to calculate the number of set bits
+  for the current number. Observe that if a number is even, the number of set
+  bits in it is the same as the number of set bits in its half (because dividing
+  by 2 is equivalent to right-shifting by 1, which just removes a trailing 0).
+  If a number is odd, the number of set bits in it is one more than the number
+  of set bits in the number before it (because the last bit is a 1).
+</p>
+
+<p>
+  Therefore, we can build an array <code>dp</code> of size n+1, where
+  <code>dp[i]</code> stores the number of set bits in <code>i</code>. The base
+  case is <code>dp[0] = 0</code>. Then, for each <code>i</code> from 1 to n, we
+  check if <code>i</code> is even or odd. If <code>i</code> is even,
+  <code>dp[i] = dp[i/2]</code>. If <code>i</code> is odd,
+  <code>dp[i] = dp[i-1] + 1</code>. This approach computes the number of set
+  bits for each number in O(1) time, resulting in an overall time complexity of
+  O(n).
+</p>
+
+<h3>Solution</h3>
+<pre>
+ public class Solution {
+  public int[] countBits(int n) {
+   int[] ans = new int[n + 1];
+   for (int i = 1; i <= n; i++) {
+    if (i % 2 == 0) {
+     ans[i] = ans[i / 2];
+    } else {
+     ans[i] = ans[i - 1] + 1;
+    }
+   }
+   return ans;
+  }
+ }
+ </pre
+>
