--- a/problems/house-robber-ii.html
+++ b/problems/house-robber-ii.html
@@ -70,3 +70,48 @@ Total amount you can rob = 1 + 3 = 4.
     >, which is already been solved.
   </li>
 </ul>
+
+<h3>Solution</h3>
+
+<p>
+  The problem is a variation of the classic "House Robber" problem. The key
+  difference is that the houses are arranged in a circle, meaning the first and
+  last houses are neighbors. This constraint forces us to consider two separate
+  cases:
+</p>
+<ol>
+  <li>Rob houses from index 0 to n-2 (inclusive), excluding the last house.</li>
+  <li>
+    Rob houses from index 1 to n-1 (inclusive), excluding the first house.
+  </li>
+</ol>
+<p>
+  We then solve the "House Robber" problem for each of these cases and take the
+  maximum of the two results. This approach ensures that we never rob both the
+  first and last houses.
+</p>
+
+<pre>
+class Solution {
+    public int rob(int[] nums) {
+        int n = nums.length;
+        if (n == 1) {
+            return nums[0];
+        }
+        return Math.max(robLinear(nums, 0, n - 2), robLinear(nums, 1, n - 1));
+    }
+
+    private int robLinear(int[] nums, int start, int end) {
+        int rob1 = 0;
+        int rob2 = 0;
+
+        for (int i = start; i <= end; i++) {
+            int temp = Math.max(rob1 + nums[i], rob2);
+            rob1 = rob2;
+            rob2 = temp;
+        }
+
+        return rob2;
+    }
+}
+</pre>
