--- a/problems/invert-binary-tree.html
+++ b/problems/invert-binary-tree.html
@@ -15,9 +15,10 @@
   style="width: 500px; height: 165px"
 />
 <pre>
-<strong>Input:</strong> root = [4,2,7,1,3,6,9]
-<strong>Output:</strong> [4,7,2,9,6,3,1]
-</pre>
+ <strong>Input:</strong> root = [4,2,7,1,3,6,9]
+ <strong>Output:</strong> [4,7,2,9,6,3,1]
+ </pre
+>
 
 <p><strong class="example">Example 2:</strong></p>
 <img
@@ -26,16 +27,18 @@
   style="width: 500px; height: 120px"
 />
 <pre>
-<strong>Input:</strong> root = [2,1,3]
-<strong>Output:</strong> [2,3,1]
-</pre>
+ <strong>Input:</strong> root = [2,1,3]
+ <strong>Output:</strong> [2,3,1]
+ </pre
+>
 
 <p><strong class="example">Example 3:</strong></p>
 
 <pre>
-<strong>Input:</strong> root = []
-<strong>Output:</strong> []
-</pre>
+ <strong>Input:</strong> root = []
+ <strong>Output:</strong> []
+ </pre
+>
 
 <p>&nbsp;</p>
 <p><strong>Constraints:</strong></p>
@@ -47,5 +50,50 @@
   <li><code>-100 &lt;= Node.val &lt;= 100</code></li>
 </ul>
 
-<strong>Tags:</strong> Tree, Depth-First Search, Breadth-First Search, Binary
-Tree
+<p><strong>Editorial:</strong></p>
+<p>
+  The problem requires inverting a binary tree. This means that for each node,
+  we need to swap its left and right children. This process can be applied
+  recursively to each node in the tree.
+</p>
+
+<p>
+  The base case for the recursion is when the node is null. In that case, we
+  simply return null.
+</p>
+
+<p>
+  For a non-null node, we first recursively invert its left and right subtrees.
+  Then, we swap the left and right children of the current node.
+</p>
+<pre>
+ // Definition for a binary tree node.
+  struct TreeNode {
+      int val;
+      TreeNode *left;
+      TreeNode *right;
+      TreeNode() : val(0), left(nullptr), right(nullptr) {}
+      TreeNode(int x) : val(x), left(nullptr), right(nullptr) {}
+      TreeNode(int x, TreeNode *left, TreeNode *right) : val(x), left(left), right(right) {}
+  };
+ 
+
+ class Solution {
+ public:
+  TreeNode* invertTree(TreeNode* root) {
+   if (root == nullptr) {
+    return nullptr;
+   }
+
+   TreeNode* temp = root->left;
+   root->left = root->right;
+   root->right = temp;
+
+   invertTree(root->left);
+   invertTree(root->right);
+
+   return root;
+  }
+ };
+ </pre
+>
