--- a/problems/maximum-depth-of-binary-tree.html
+++ b/problems/maximum-depth-of-binary-tree.html
@@ -42,5 +42,35 @@
   <li><code>-100 &lt;= Node.val &lt;= 100</code></li>
 </ul>
 
-<strong>Tags:</strong> Tree, Depth-First Search, Breadth-First Search, Binary
-Tree
+<p><strong>Editorial</strong></p>
+<p>
+  The maximum depth of a binary tree can be found using a recursive approach.
+  The depth of an empty tree is 0. For a non-empty tree, the maximum depth is
+  the maximum of the depths of the left and right subtrees, plus 1 (to account
+  for the root node).
+</p>
+
+<pre><code>/**
+ * Definition for a binary tree node.
+ * struct TreeNode {
+ *     int val;
+ *     TreeNode *left;
+ *     TreeNode *right;
+ *     TreeNode() : val(0), left(nullptr), right(nullptr) {}
+ *     TreeNode(int x) : val(x), left(nullptr), right(nullptr) {}
+ *     TreeNode(int x, TreeNode *left, TreeNode *right) : val(x), left(left), right(right) {}
+ * };
+ */
+class Solution {
+public:
+    int maxDepth(TreeNode* root) {
+        if (root == nullptr) {
+            return 0;
+        } else {
+            int left_depth = maxDepth(root->left);
+            int right_depth = maxDepth(root->right);
+            return max(left_depth, right_depth) + 1;
+        }
+    }
+};
+</code></pre>
