--- a/problems/merge-two-sorted-lists.html
+++ b/problems/merge-two-sorted-lists.html
@@ -55,3 +55,64 @@
 </ul>
 
 <strong>Tags:</strong> Linked List, Recursion
+
+<p><strong>Editorial</strong></p>
+
+<p>
+  The key to solving this problem is to use a dummy node to simplify the merging
+  process. The dummy node will act as the head of the merged list, and we can
+  append nodes to it as we iterate through the two input lists.
+</p>
+
+<p>
+  We iterate through both lists simultaneously. In each iteration, we compare
+  the values of the current nodes in both lists. The smaller value is appended
+  to the merged list, and the corresponding list's pointer is advanced. If one
+  list is exhausted before the other, the remaining nodes of the other list are
+  simply appended to the merged list.
+</p>
+
+<p>
+  The time complexity of this solution is O(m+n), where m and n are the lengths
+  of the two input lists. This is because we iterate through both lists once.
+  The space complexity is O(1) because we only use a constant amount of extra
+  space.
+</p>
+
+<pre>
+/**
+ * Definition for singly-linked list.
+ * public class ListNode {
+ *     int val;
+ *     ListNode next;
+ *     ListNode() {}
+ *     ListNode(int val) { this.val = val; this.next = null; }
+ *     ListNode(int val, ListNode next) { this.val = val; this.next = next; }
+ * }
+ */
+class Solution {
+    public ListNode mergeTwoLists(ListNode list1, ListNode list2) {
+        ListNode dummy = new ListNode(-1);
+        ListNode tail = dummy;
+
+        while (list1 != null && list2 != null) {
+            if (list1.val <= list2.val) {
+                tail.next = list1;
+                list1 = list1.next;
+            } else {
+                tail.next = list2;
+                list2 = list2.next;
+            }
+            tail = tail.next;
+        }
+
+        if (list1 != null) {
+            tail.next = list1;
+        } else {
+            tail.next = list2;
+        }
+
+        return dummy.next;
+    }
+}
+</pre>
