--- a/problems/palindromic-substrings.html
+++ b/problems/palindromic-substrings.html
@@ -21,18 +21,20 @@
 <p><strong class="example">Example 1:</strong></p>
 
 <pre>
-<strong>Input:</strong> s = &quot;abc&quot;
-<strong>Output:</strong> 3
-<strong>Explanation:</strong> Three palindromic strings: &quot;a&quot;, &quot;b&quot;, &quot;c&quot;.
-</pre>
+  <strong>Input:</strong> s = &quot;abc&quot;
+  <strong>Output:</strong> 3
+  <strong>Explanation:</strong> Three palindromic strings: &quot;a&quot;, &quot;b&quot;, &quot;c&quot;.
+ </pre
+>
 
 <p><strong class="example">Example 2:</strong></p>
 
 <pre>
-<strong>Input:</strong> s = &quot;aaa&quot;
-<strong>Output:</strong> 6
-<strong>Explanation:</strong> Six palindromic strings: &quot;a&quot;, &quot;a&quot;, &quot;a&quot;, &quot;aa&quot;, &quot;aa&quot;, &quot;aaa&quot;.
-</pre>
+  <strong>Input:</strong> s = &quot;aaa&quot;
+  <strong>Output:</strong> 6
+  <strong>Explanation:</strong> Six palindromic strings: &quot;a&quot;, &quot;a&quot;, &quot;a&quot;, &quot;aa&quot;, &quot;aa&quot;, &quot;aaa&quot;.
+ </pre
+>
 
 <p>&nbsp;</p>
 <p><strong>Constraints:</strong></p>
@@ -63,3 +65,40 @@
     reusing some previous computation?
   </li>
 </ul>
+
+<h3>Solution</h3>
+<p>
+  The core idea is to iterate through each character of the string and consider
+  it as the center of a potential palindrome. We then expand outwards from this
+  center, checking for palindromes of both odd and even lengths.
+</p>
+
+<pre>
+ class Solution {
+  public int countSubstrings(String s) {
+   int n = s.length();
+   int count = 0;
+
+   for (int i = 0; i < n; i++) {
+    // Odd length palindromes
+    count += expandAroundCenter(s, i, i);
+
+    // Even length palindromes
+    count += expandAroundCenter(s, i, i + 1);
+   }
+
+   return count;
+  }
+
+  private int expandAroundCenter(String s, int left, int right) {
+   int count = 0;
+   while (left >= 0 && right < s.length() && s.charAt(left) == s.charAt(right)) {
+    count++;
+    left--;
+    right++;
+   }
+   return count;
+  }
+ }
+ </pre
+>
