--- a/problems/reverse-bits.html
+++ b/problems/reverse-bits.html
@@ -28,18 +28,20 @@
 <p><strong class="example">Example 1:</strong></p>
 
 <pre>
-<strong>Input:</strong> n = 00000010100101000001111010011100
-<strong>Output:</strong>    964176192 (00111001011110000010100101000000)
-<strong>Explanation: </strong>The input binary string <strong>00000010100101000001111010011100</strong> represents the unsigned integer 43261596, so return 964176192 which its binary representation is <strong>00111001011110000010100101000000</strong>.
-</pre>
+ <strong>Input:</strong> n = 00000010100101000001111010011100
+ <strong>Output:</strong> 964176192 (00111001011110000010100101000000)
+ <strong>Explanation:</strong> The input binary string <strong>00000010100101000001111010011100</strong> represents the unsigned integer 43261596, so return 964176192 which its binary representation is <strong>00111001011110000010100101000000</strong>.
+ </pre
+>
 
 <p><strong class="example">Example 2:</strong></p>
 
 <pre>
-<strong>Input:</strong> n = 11111111111111111111111111111101
-<strong>Output:</strong>   3221225471 (10111111111111111111111111111111)
-<strong>Explanation: </strong>The input binary string <strong>11111111111111111111111111111101</strong> represents the unsigned integer 4294967293, so return 3221225471 which its binary representation is <strong>10111111111111111111111111111111</strong>.
-</pre>
+ <strong>Input:</strong> n = 11111111111111111111111111111101
+ <strong>Output:</strong> 3221225471 (10111111111111111111111111111111)
+ <strong>Explanation:</strong> The input binary string <strong>11111111111111111111111111111101</strong> represents the unsigned integer 4294967293, so return 3221225471 which its binary representation is <strong>10111111111111111111111111111111</strong>.
+ </pre
+>
 
 <p>&nbsp;</p>
 <p><strong>Constraints:</strong></p>
@@ -57,3 +59,17 @@
 </p>
 
 <strong>Tags:</strong> Divide and Conquer, Bit Manipulation
+
+<pre>
+ public class Solution {
+  public int reverseBits(int n) {
+  int result = 0;
+  for (int i = 0; i < 32; i++) {
+  result += (n & 1) << (31 - i);
+  n >>>= 1;
+  }
+  return result;
+  }
+ }
+ </pre
+>
