--- a/problems/rotate-image.html
+++ b/problems/rotate-image.html
@@ -48,3 +48,40 @@
 </ul>
 
 <strong>Tags:</strong> Array, Math, Matrix
+
+<h3>Editorial</h3>
+
+<p>
+  The problem requires rotating a square matrix by 90 degrees clockwise
+  in-place. A common approach is to perform a transpose of the matrix followed
+  by reversing each row. Transposing swaps elements across the main diagonal,
+  and reversing the rows completes the 90-degree rotation.
+</p>
+
+<h3>Solution</h3>
+
+<pre>
+class Solution {
+    public void rotate(int[][] matrix) {
+        int n = matrix.length;
+
+        // Transpose the matrix
+        for (int i = 0; i < n; i++) {
+            for (int j = i; j < n; j++) {
+                int temp = matrix[i][j];
+                matrix[i][j] = matrix[j][i];
+                matrix[j][i] = temp;
+            }
+        }
+
+        // Reverse each row
+        for (int i = 0; i < n; i++) {
+            for (int j = 0; j < n / 2; j++) {
+                int temp = matrix[i][j];
+                matrix[i][j] = matrix[i][n - 1 - j];
+                matrix[i][n - 1 - j] = temp;
+            }
+        }
+    }
+}
+</pre>
