--- a/problems/same-tree.html
+++ b/problems/same-tree.html
@@ -58,5 +58,36 @@
   </li>
 </ul>
 
-<strong>Tags:</strong> Tree, Depth-First Search, Breadth-First Search, Binary
-Tree
+<p><strong>Editorial:</strong></p>
+<p>
+  The problem asks us to determine if two binary trees are identical. We can
+  solve this using recursion. The base cases are when both nodes are null
+  (they're the same) or when one is null and the other isn't (they're
+  different). If both nodes are non-null, we compare their values. If the values
+  are the same, we recursively check if the left subtrees are the same and if
+  the right subtrees are the same. The trees are the same only if the values are
+  the same and both subtrees are the same.
+</p>
+
+<pre>
+/**
+ * Definition for a binary tree node.
+ * struct TreeNode {
+ *     int val;
+ *     TreeNode *left;
+ *     TreeNode *right;
+ *     TreeNode() : val(0), left(nullptr), right(nullptr) {}
+ *     TreeNode(int x) : val(x), left(nullptr), right(nullptr) {}
+ *     TreeNode(int x, TreeNode *left, TreeNode *right) : val(x), left(left), right(right) {}
+ * };
+ */
+class Solution {
+public:
+    bool isSameTree(TreeNode* p, TreeNode* q) {
+        if (!p && !q) return true;
+        if (!p || !q) return false;
+        if (p->val != q->val) return false;
+        return isSameTree(p->left, q->left) && isSameTree(p->right, q->right);
+    }
+};
+</pre>
