--- a/problems/set-matrix-zeroes.html
+++ b/problems/set-matrix-zeroes.html
@@ -90,3 +90,75 @@
     determine whether a row or column has been set to zero.
   </li>
 </ul>
+
+<p><strong>Editorial:</strong></p>
+<p>
+  The key idea is to use the first row and first column of the matrix to store
+  the information about which rows and columns need to be set to zero. We use
+  two boolean variables to keep track of whether the first row and first column
+  themselves need to be set to zero.
+</p>
+<p>
+  First, we iterate through the matrix and if we find a zero, we set the
+  corresponding element in the first row and first column to zero. Then, we
+  iterate through the matrix again, starting from the second row and second
+  column, and set the elements to zero based on the values in the first row and
+  first column. Finally, we set the first row and first column to zero if
+  necessary.
+</p>
+
+<pre>
+<code>
+class Solution {
+    public void setZeroes(int[][] matrix) {
+        int m = matrix.length;
+        int n = matrix[0].length;
+        boolean firstRowZero = false;
+        boolean firstColZero = false;
+
+        for (int i = 0; i < m; i++) {
+            if (matrix[i][0] == 0) {
+                firstColZero = true;
+                break;
+            }
+        }
+
+        for (int j = 0; j < n; j++) {
+            if (matrix[0][j] == 0) {
+                firstRowZero = true;
+                break;
+            }
+        }
+
+        for (int i = 1; i < m; i++) {
+            for (int j = 1; j < n; j++) {
+                if (matrix[i][j] == 0) {
+                    matrix[i][0] = 0;
+                    matrix[0][j] = 0;
+                }
+            }
+        }
+
+        for (int i = 1; i < m; i++) {
+            for (int j = 1; j < n; j++) {
+                if (matrix[i][0] == 0 || matrix[0][j] == 0) {
+                    matrix[i][j] = 0;
+                }
+            }
+        }
+
+        if (firstRowZero) {
+            for (int j = 0; j < n; j++) {
+                matrix[0][j] = 0;
+            }
+        }
+
+        if (firstColZero) {
+            for (int i = 0; i < m; i++) {
+                matrix[i][0] = 0;
+            }
+        }
+    }
+}
+</code>
+</pre>
